--- a/index.html
+++ b/index.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<title>Monthly Books Read</title>
+  <meta charset="UTF-8" />
+  <title>Monthly Books</title>
+  <style>
+    body {
+      margin: 0;
+      background: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-<style>
-body {
-  margin: 0;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+    .panel {
+      width: 220px;
+      height: 260px;
+      background: #F4E6D8;
+      border-radius: 34px;
+      border: 1px solid #E6D3C3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.05);
+      position: relative;
+      overflow: hidden;
+    }
 
-.panel {
-  width: 200px;
-  height: 220px;
-  background: #F4E6D8;
-  border-radius: 28px;
-  border: 1px solid #E6D3C3;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.05);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-}
+    .number {
+      font-family: Georgia, serif;
+      font-size: 130px;
+      color: #C29563;
+      font-weight: 700;
+      line-height: 1;
+      position: relative;
+      z-index: 2;
+    }
 
-.content {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+    .stars {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      z-index: 1;
+    }
 
-.number {
-  font-family: Georgia, serif;
-  font-size: 125px;
-  color: #C29563;
-  font-weight: 700;
-  line-height: 1;
-}
+    .star {
+      position: absolute;
+      color: #D7B27C;
+      opacity: 0.75;
+      font-size: 18px;
+      animation: twinkle 3.4s infinite ease-in-out;
+    }
 
-.stars {
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-  pointer-events: none;
-  font-family: serif;
-}
+    .star.soft {
+      font-size: 14px;
+      opacity: 0.55;
+      animation-duration: 4.6s;
+    }
 
-.star {
-  position: absolute;
-  color: #D8A35F;
-  opacity: 0.75;
-  animation: twinkle 4s ease-in-out infinite;
-}
+    .star.big {
+      font-size: 22px;
+      opacity: 0.8;
+      animation-duration: 2.8s;
+    }
 
-.star.light { color: #E7B877; }
-.star.soft { color: #C99956; opacity: 0.6; }
+    @keyframes twinkle {
+      0%, 100% { transform: scale(1); opacity: 0.55; }
+      50% { transform: scale(1.12); opacity: 0.95; }
+    }
 
-@keyframes twinkle {
-  0%, 100% { opacity: 0.2; transform: scale(0.9); }
-  50% { opacity: 0.85; transform: scale(1.15); }
-}
-</style>
+    .hint {
+      position: absolute;
+      left: 12px;
+      right: 12px;
+      bottom: 10px;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-size: 11px;
+      color: rgba(60, 40, 20, 0.55);
+      text-align: center;
+      line-height: 1.2;
+      display: none;
+      z-index: 3;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="panel">
+    <div class="stars" aria-hidden="true">
+      <span class="star big" style="top: 22px; left: 26px;">✦</span>
+      <span class="star soft" style="top: 54px; right: 34px;">✧</span>
+      <span class="star" style="top: 120px; left: 34px;">✦</span>
+      <span class="star soft" style="top: 150px; right: 44px;">✧</span>
+      <span class="star big" style="bottom: 44px; left: 86px;">✦</span>
+      <span class="star soft" style="bottom: 24px; right: 70px;">✧</span>
+    </div>
 
-<div class="panel">
-
-  <div class="stars">
-    <span class="star" style="top:15%; left:20%; font-size:16px;">✦</span>
-    <span class="star light" style="top:25%; left:75%; font-size:14px;">✧</span>
-    <span class="star soft" style="top:60%; left:18%; font-size:12px;">✦</span>
-    <span class="star" style="top:70%; left:70%; font-size:15px;">✧</span>
-    <span class="star light" style="top:40%; left:50%; font-size:13px;">✦</span>
-    <span class="star soft" style="top:82%; left:45%; font-size:11px;">✧</span>
-  </div>
-
-  <div class="content">
     <div class="number" id="counter">0</div>
+    <div class="hint" id="hint"></div>
   </div>
 
-</div>
-
-<script>
-async function getMonthlyCount() {
-  const res = await fetch("/api/monthly?t=" + Date.now());
-  const data = await res.json();
-  return data.count ?? 0;
-}
-
-async function animateCounter() {
-  const counter = document.getElementById("counter");
-  const total = await getMonthlyCount();
-
-  let current = 0;
-  const step = Math.max(1, Math.ceil(total / 60));
-
-  const interval = setInterval(() => {
-    current += step;
-    if (current >= total) {
-      current = total;
-      clearInterval(interval);
+  <script>
+    async function getLiveCount() {
+      // cache-bust so changes show immediately while testing
+      const res = await fetch("/api/monthly?t=" + Date.now());
+      if (!res.ok) {
+        const text = await res.text();
+        throw new Error(`API ${res.status}: ${text}`);
+      }
+      const data = await res.json();
+      return data.count ?? 0;
     }
-    counter.textContent = current;
-  }, 30);
-}
 
-animateCounter();
-</script>
+    async function animateCounter() {
+      const counter = document.getElementById("counter");
+      const hint = document.getElementById("hint");
 
+      try {
+        const totalBooks = await getLiveCount();
+
+        let current = 0;
+        const step = Math.max(1, Math.ceil(totalBooks / 60));
+
+        const interval = setInterval(() => {
+          current += step;
+          if (current >= totalBooks) {
+            current = totalBooks;
+            clearInterval(interval);
+          }
+          counter.textContent = current;
+        }, 30);
+      } catch (err) {
+        hint.style.display = "block";
+        hint.textContent = String(err).slice(0, 180);
+        console.error(err);
+      }
+    }
+
+    animateCounter();
+  </script>
 </body>
 </html>
